# carbon-compare

./: .gitignore  Dockerfile  README.md  build.sh  db.sqlite3  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt  todo.txt
.github/: github-actions-demo.yml
.github/workflows/: main.yml
custom_user/: forms.py  models.py  views.py
custom_user/migrations/: 0001_initial.py
ecoProject/: asgi.py  settings.py  urls.py  wsgi.py
footprint_app/: admin.py  apps.py  models.py  views.py
footprint_app/migrations/: 0001_initial.py
footprint_app/templates/: home.html
footprint_app/templates/fragments/: nav.html
shipments/: apps.py  views.py
shipments/templates/shipments/: home.html
