[tool.poetry]
name = "eco_django"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.12"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.1.0"}
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
